--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1989,6 +1989,9 @@ button.small,
 #banner .inner footer {
   margin: 2em 0 0 0;
 }
+#banner .inner.inside header {
+  margin: 0;
+}
 
 /* Main */
 #main {
