--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1017,6 +1017,12 @@ $pattern-background-size: 25em;
 			footer {
 				margin: 2em 0 0 0;
 			}
+
+			&.inside {
+				header {
+					margin: 0;
+				}
+			}
 		}
 	}
 
