--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -941,7 +941,7 @@ $pattern-background-size: 25em;
 		background-attachment: scroll, scroll, scroll, fixed;
 		background-color: _palette(three, bg);
 		background-image: url('images/light-bl.svg'), url('images/light-br.svg'), url('images/overlay.png'), url('../../images/banner.jpg');
-		background-position: bottom left, bottom right, top left, top center;
+		background-position: bottom left, bottom right, top left, center;
 		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
 		background-size: $pattern-background-size, $pattern-background-size, auto, cover;
 		color: _palette(banner, fg);
