--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -393,7 +393,7 @@ header {
 
   &.special {
     margin-bottom: 5em;
-    padding-top: 0;
+    padding: 0 4rem;
     position: relative;
     text-align: center;
 
