--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2049,6 +2049,9 @@ button.small,
 #banner.guided {
   background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/adventures.jpg");
 }
+#banner.offerings {
+  background-position: bottom left, bottom right, top left, center -400px;
+}
 #banner .inner {
   animation: reveal-banner 1s 0.25s ease-in-out;
   animation-fill-mode: forwards;
