--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1913,6 +1913,7 @@ button.small,
   border: solid 1px transparent;
   color: inherit;
   display: inline-block;
+  font-weight: 700;
   line-height: 1em;
   padding: 0.6em 0.75em;
   text-decoration: none;
