--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -923,6 +923,7 @@ button,
           border: solid 1px transparent;
           color: inherit;
           display: inline-block;
+          font-weight: 700;
           line-height: 1em;
           padding: 0.6em 0.75em;
           text-decoration: none;
