--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -2137,7 +2137,7 @@ body.index #main {
   background-attachment: scroll, scroll, scroll, fixed;
   background-color: #000;
   background-image: url("images/light-tl.svg"), url("images/light-tr.svg"), url("images/overlay.png"), url("../../images/banner.jpg");
-  background-position: top left, top right, top left, bottom center;
+  background-position: top left, top right, top left, top center;
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
   color: #fff;
