--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1627,8 +1627,9 @@ input[type=email] {
 .icon.featured {
   cursor: default;
   display: block;
-  margin: 0 0 1.5em 0;
-  opacity: 0.35;
+  margin: 0 auto;
+  max-width: 125px;
+  opacity: 0.65;
   text-align: center;
 }
 .icon.featured:before {
