--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -611,8 +611,9 @@ input[type="email"] {
   &.featured {
     cursor: default;
     display: block;
-    margin: 0 0 1.5em 0;
-    opacity: 0.35;
+    margin: 0 auto;
+    max-width: 125px;
+    opacity: 0.65;
     text-align: center;
 
     &:before {
