--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -401,6 +401,10 @@ header {
       margin-bottom: 0;
     }
 
+    &.contact h2 {
+      margin-top: 2em;
+    }
+
     h2 + p {
       margin-bottom: 0;
       padding-top: 1.5em;
