--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1080,7 +1080,8 @@ button,
   text-align: center;
 
   &.hot-tug {
-    background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/hot-tug.png");
+    background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/hot-tug2.png");
+    background-position: bottom left, bottom right, top left, center -650px;
   }
 
   &.camping {
