--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2693,4 +2693,16 @@ body.index #main {
     width: 50px;
     height: 34px;
   }
+}
+.experience {
+  position: relative;
+}
+.experience-price {
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 0;
+  color: #fff;
+  max-width: 250px;
+  padding: 8px;
+  position: absolute;
+  right: 0;
 }/*# sourceMappingURL=main.css.map */
