--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -649,6 +649,11 @@ ul {
   li {
     padding-left: 0.5em;
   }
+
+  &.list-unstyled {
+    list-style: none;
+    padding-left: 0;
+  }
 }
 
 /* Icons */
@@ -1941,12 +1946,43 @@ body.index #main {
   position: relative;
 
   &-price {
-    background: rgba(0,0,0,.5);
+    background: rgba(0, 0, 0, 0.5);
     bottom: 0;
     color: #fff;
     max-width: 250px;
     padding: 8px;
     position: absolute;
     right: 0;
+  }
+}
+
+.card {
+  &-featured {
+    padding-left: 32px;
+
+    &:after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 3px;
+      height: 100%;
+      background-color: #deeaef;
+      content: "";
+    }
+  }
+}
+
+.expect {
+  &-item {
+    text-align: left;
+
+    .card-featured {
+      position: relative;
+
+      p {
+        font-weight: 500;
+        margin-bottom: 1em;
+      }
+    }
   }
 }
