--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1086,7 +1086,7 @@ button,
 
   &.hot-tug {
     background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/hot-tug2.png");
-    background-position: bottom left, bottom right, top left, center -650px;
+    background-position: bottom left, bottom right, top left, bottom center;
   }
 
   &.camping {
