--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,7 +2048,7 @@ button.small,
 }
 #banner.hot-tug {
   background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/hot-tug2.png");
-  background-position: bottom left, bottom right, top left, center -650px;
+  background-position: bottom left, bottom right, top left, bottom center;
 }
 #banner.camping {
   background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/camping-retreat.jpg");
