--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -519,9 +519,17 @@ input[type="email"] {
 
     img {
       display: block;
-      width: 100%;
-      max-height: 323px;
+      height: 325px;
       object-fit: cover;
+      width: 100%;      
+
+      @include breakpoint("<=wide") {
+        height: 275px;
+      }
+
+      @include breakpoint("<=normal") {
+        height: 250px;
+      }
     }
   }
 }
