--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1543,10 +1543,20 @@ input[type=email] {
 }
 .image.featured img {
   display: block;
-  width: 100%;
-  max-height: 323px;
+  height: 325px;
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
+}
+@media screen and (max-width: 1680px) {
+  .image.featured img {
+    height: 275px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .image.featured img {
+    height: 250px;
+  }
 }
 
 /* Icon */
