--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1238,7 +1238,7 @@ body.index #main {
 #footer {
   background: _palette(footer, bg);
   color: _palette(footer, fg);
-  padding: 5em 5em 10em 5em;
+  padding: 2em;
   text-align: center;
 
   .copyright {
