--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2181,7 +2181,7 @@ body.index #main {
 #footer {
   background: #E8EEF4;
   color: #7c8081;
-  padding: 5em 5em 10em 5em;
+  padding: 2em;
   text-align: center;
 }
 #footer .copyright {
