--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -424,6 +424,12 @@ header {
         opacity: 0.35;
       }
     }
+
+    &.contact {
+      .icon {
+        top: -4em;
+      }
+    }
   }
 }
 
@@ -2006,7 +2012,7 @@ body.index #main {
       position: relative;
 
       h3 {
-        margin-bottom: .5em;
+        margin-bottom: 0.5em;
       }
 
       p {
