--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1457,6 +1457,11 @@ header.special .icon:before {
 header.special.contact .icon {
   top: -4em;
 }
+@media screen and (max-width: 1680px) {
+  header.special.contact .icon {
+    top: 0em;
+  }
+}
 
 footer > :last-child {
   margin-bottom: 0;
